# pylens-fork

./: .envrc  Makefile  PKG-INFO  README.rst  noxfile.py  pyproject.toml  setup.cfg  setup.py
LICENSES/: BSD-3-Clause.txt
docs/source/: api.rst  conf.py  index.rst
docs/source/api/: base_lenses.rst  core_lenses.rst  util_lenses.rst
docs/source/examples/: basic.rst
examples/: advanced.py  basic.py
pylens/: __init__.py  base_lenses.py  charsets.py  containers.py  core_lenses.py  debug.py  exceptions.py  item.py  readers.py  rollback.py  settings.py  test_base_lenses.py  test_basic_lenses.py  test_core_lenses.py  test_debug.py  test_readers.py  test_rollback.py  test_util.py  test_util_lenses.py  util.py  util_lenses.py  version.py
pylens/tests/: test_base_lenses.py  test_core_lenses.py  test_debug.py  test_item.py  test_readers.py  test_rollback.py  test_util.py  test_util_lenses.py
scripts/: distribute.py  generate_docs.py  run_tests.py
src/pylens/: base_lenses.py  charsets.py  containers.py  debug.py  rollback.py  settings.py  util.py
src/pylens/tests/: test_debug.py  test_item.py  test_rollback.py
testing/: tests.py
tests/: test_advanced.py  test_all.py  test_basic.py  test_debctrl.py  test_network_itnterfaces.py
