[tool.poetry]
name = "pylens-fork"
version = "0.1.0"
description = "Pylens - Object Serialisation through a Lens"
# Not really the author, just the author of this fork.
authors = ["Stefane Fermigier <sf@abilian.com>"]
license = "BSD"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
nbdebug = "^1.3"
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
