[tool.poetry]
name = "pylens-fork"
version = "0.1.0"
description = "Pylens - Object Serialisation through a Lens"
# Not really the author, just the author of this fork.
authors = ["Stefane Fermigier <sf@abilian.com>"]
license = "BSD"
packages = [
    { include = "pylens" },
]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
abilian-devtools = "*"
nbdebug = "^1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
ignore = [
    "E501",  # line too long
]
